--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -105,7 +105,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="332dp"
         android:fontFamily="@font/onefont"
-        android:text="Email : merylle_salvador@dlsu.edu.ph" />
+        android:text="Email : " />
 
     <FrameLayout
         android:layout_width="400dp"
