--- a/app/src/main/res/layout/task_details.xml
+++ b/app/src/main/res/layout/task_details.xml
@@ -38,14 +38,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="560dp"
+        android:layout_height="601dp"
         android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/taskDetailsLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="15dp"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -60,7 +61,7 @@
                 android:textSize="40sp" />
 
             <TextView
-                android:id="@+id/task_description"
+                android:id="@+id/task_name_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -68,6 +69,15 @@
                 android:text="Task Description"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/task_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/onefont"
+                android:text="Task Description"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/task_due"
