--- a/app/src/main/res/layout/edit_task.xml
+++ b/app/src/main/res/layout/edit_task.xml
@@ -168,7 +168,7 @@
                 android:text="Attachment" />
 
 
-            <TextView
+            <ImageView
                 android:id="@+id/edit_file"
                 android:layout_width="295dp"
                 android:layout_height="45dp"
@@ -191,7 +191,7 @@
                 android:layout_height="5dp" />
 
             <Button
-                android:id="@+id/edit_confirm"
+                android:id="@+id/confirm_edit"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#FFC16E"
@@ -223,7 +223,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="93dp"
+            android:layout_marginTop="82dp"
             android:layout_marginLeft="68dp"
             android:text="Tasks"
             android:textColor="#E59356"
@@ -242,7 +242,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="93dp"
+            android:layout_marginTop="82dp"
             android:layout_marginLeft="285dp"
             android:text="Profile"
             android:textColor="#FFFFFF"
