-sort is now working -added a sort by due date -edited sub menus for sort(unique for each option instead of ascending/descending) -added a text below the search bar for the current sort option

--- a/app/src/main/res/menu/sort_menu.xml
+++ b/app/src/main/res/menu/sort_menu.xml
@@ -1,11 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/sort_by_letter"
-        android:title="Sort by A-Z" />
+        android:title="Sort by Task Name" />
     <item
         android:id="@+id/sort_by_priority"
         android:title="Sort by Priority" />
     <item
         android:id="@+id/sort_by_status"
         android:title="Sort by Status" />
+    <item
+        android:id="@+id/sort_by_date"
+        android:title="Sort by Due Date" />
 </menu>
