--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -69,6 +69,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:backgroundTint="#FFC16E"
+            android:fontFamily="@font/onefont"
             android:text="Sort" />
         <Button
             android:id="@+id/homepage_new_button"
@@ -78,9 +79,22 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="#FFC16E"
             android:layout_marginRight="10dp"
+            android:fontFamily="@font/onefont"
             android:text="Filter" />
 
+
     </LinearLayout>
+    <TextView
+        android:id="@+id/sort_info_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="20dp"
+        android:text=""
+        android:fontFamily="@font/onefont"
+        android:textSize="14sp"
+        android:textColor="#000000" />
+
 
 
     <Space
