--- a/app/src/main/res/menu/sub_menu_date.xml
+++ b/app/src/main/res/menu/sub_menu_date.xml
@@ -3,9 +3,9 @@
     <group android:id="@+id/sort_direction_group">
         <item
             android:id="@+id/sort_asc"
-            android:title="LOW TO HIGH" />
+            android:title="EARLIEST TO LATEST" />
         <item
             android:id="@+id/sort_desc"
-            android:title="HIGH TO LOW" />
+            android:title="LATEST TO EARLIEST" />
     </group>
 </menu>
