--- a/app/src/main/res/menu/sub_menu_status.xml
+++ b/app/src/main/res/menu/sub_menu_status.xml
@@ -3,9 +3,9 @@
     <group android:id="@+id/sort_direction_group">
         <item
             android:id="@+id/sort_asc"
-            android:title="Ascending" />
+            android:title="COMPLETED TO NOT DONE" />
         <item
             android:id="@+id/sort_desc"
-            android:title="Descending" />
+            android:title="NOT DONE TO COMPLETED" />
     </group>
 </menu>
