--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -51,7 +51,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:textSize="20sp"
-        android:fontFamily="@font/onefont" />
+        android:fontFamily="@font/onefont"
+        android:textColor="@color/black"/>
 
     <View
         android:layout_width="match_parent"
