--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="darker_gray">#808080</color>
     <color name="white">#FFFFFFFF</color>
     <color name ="lightGray">#FFC16E</color>
+    <color name = "red">#FF6147</color>
+    <color name = "green">#A2EF87</color>
+    <color name = "amber">#FFC96F</color>
 </resources>
