--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -72,7 +72,7 @@
             android:text="Sort" />
 
         <Button
-            android:id="@+id/homepage_startdate"
+            android:id="@+id/homepage_start"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -83,7 +83,7 @@
             android:text="Start Date" />
 
         <Button
-            android:id="@+id/homepage_enddate"
+            android:id="@+id/homepage_end"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
