--- a/app/src/main/res/layout/edit_task.xml
+++ b/app/src/main/res/layout/edit_task.xml
@@ -168,11 +168,29 @@
                 android:text="Attachment" />
 
 
-            <ImageView
-                android:id="@+id/edit_file"
-                android:layout_width="295dp"
-                android:layout_height="45dp"
-                app:srcCompat="@android:drawable/screen_background_light" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <!-- ImageView -->
+                <ImageView
+                    android:id="@+id/edit_file"
+                    android:layout_width="295dp"
+                    android:layout_height="250dp"
+                    android:layout_centerInParent="true"
+                    app:srcCompat="@android:drawable/screen_background_light" />
+
+                <ImageButton
+                    android:id="@+id/closeButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_close_24"
+                android:background="@android:color/transparent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="45dp"
+                android:layout_marginTop="18dp"/>
+            </RelativeLayout>
 
             <Space
                 android:layout_width="match_parent"
@@ -189,14 +207,6 @@
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="5dp" />
-
-            <Button
-                android:id="@+id/confirm_delete"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#FFC16E"
-                android:fontFamily="@font/onefont"
-                android:text="Delete Image" />
 
             <Button
                 android:id="@+id/confirm_edit"
@@ -240,7 +250,7 @@
             android:textSize="17sp" />
 
         <ImageButton
-            android:id="@+id/add_profile"
+            android:id="@+id/edit_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
