--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -47,24 +47,27 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/homepage_search"
-            android:layout_width="103dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+
+
+        <SearchView
+            android:id="@+id/homepage_search1"
             android:layout_marginTop="30dp"
-            android:layout_weight="2"
-            android:drawableStart="@drawable/baseline_search_24"
-            android:ems="10"
+            android:layout_width="150dp"
+            android:iconifiedByDefault="false"
             android:fontFamily="@font/onefont"
-            android:hint="Search"
-            android:maxLines="1" />
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:maxLines="1"
+            android:background="@drawable/search_view_bg"
+            android:queryHint="Search"
+            android:textSize="18sp" />
+
 
         <Button
             android:id="@+id/homepage_sort"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="2dp"
             android:layout_marginTop="30dp"
             android:textSize="30px"
             android:backgroundTint="#FFC16E"
@@ -75,7 +78,7 @@
             android:id="@+id/homepage_startdate"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="2dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#FFC16E"
             android:fontFamily="@font/onefont"
@@ -86,13 +89,15 @@
             android:id="@+id/homepage_enddate"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="2dp"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="2dp"
             android:backgroundTint="#FFC16E"
             android:textSize="30px"
             android:fontFamily="@font/onefont"
             android:text="End Date" />
+
+
 
 
     </LinearLayout>
