Updated layout of search

--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -48,17 +48,16 @@
         android:orientation="horizontal">
 
 
-
         <SearchView
             android:id="@+id/homepage_search1"
-            android:layout_marginTop="30dp"
-            android:layout_width="150dp"
-            android:iconifiedByDefault="false"
-            android:fontFamily="@font/onefont"
+            android:layout_width="187dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:layout_weight="2"
-            android:maxLines="1"
             android:background="@drawable/search_view_bg"
+            android:fontFamily="@font/onefont"
+            android:iconifiedByDefault="false"
+            android:maxLines="1"
             android:queryHint="Search"
             android:textSize="18sp" />
 
@@ -69,36 +68,38 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginTop="30dp"
-            android:textSize="30px"
             android:backgroundTint="#FFC16E"
             android:ems="12"
             android:fontFamily="@font/onefont"
-            android:text="Sort" />
+            android:text="Sort"
+            android:textSize="30px" />
 
         <Button
             android:id="@+id/homepage_start"
-            android:layout_width="110dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="#FFC16E"
             android:fontFamily="@font/onefont"
-            android:textSize="30px"
-            android:text="Start Date" />
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
+            android:text="Start Date"
+            android:textSize="30px" />
 
         <Button
             android:id="@+id/homepage_end"
-            android:layout_width="110dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginTop="30dp"
             android:layout_marginRight="1dp"
             android:backgroundTint="#FFC16E"
-            android:textSize="30px"
             android:fontFamily="@font/onefont"
-            android:text="End Date" />
-
-
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
+            android:text="End Date"
+            android:textSize="30px" />
 
 
     </LinearLayout>
